compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__attribute_javascript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 157
expression: "\n@external(javascript, \"./one.mjs\", \"oneJs\")\npub fn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "./one.mjs", "oneJs")
pub fn one(x: Int) -> Int {
  todo
}

pub fn main() {
  one(1)
}


----- COMPILED JAVASCRIPT
import { oneJs as one } from "./one.mjs";

export { one };

export function main() {
  return one(1);
}
