compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__both_externals_no_valid_impl.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 287
expression: "\n@external(javascript, \"one\", \"one\")\npub fn js() -> Nil\n\n@external(erlang, \"one\", \"one\")\npub fn erl() -> Nil\n\npub fn should_not_be_generated() {\n  js()\n  erl()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "one", "one")
pub fn js() -> Nil

@external(erlang, "one", "one")
pub fn erl() -> Nil

pub fn should_not_be_generated() {
  js()
  erl()
}


----- COMPILED JAVASCRIPT
import { one as js } from "one";

export { js };
