compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__discarded_names_in_external_are_passed_correctly.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 305
expression: "\n@external(javascript, \"wibble\", \"wobble\")\npub fn woo(_ignored: a) -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "wibble", "wobble")
pub fn woo(_ignored: a) -> Nil


----- COMPILED JAVASCRIPT
import { wobble as woo } from "wibble";

export { woo };
