compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__duplicate_import.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 68
expression: "\n@external(javascript, \"./the/module.mjs\", \"dup\")\npub fn one() -> Nil\n\n@external(javascript, \"./the/module.mjs\", \"dup\")\npub fn two() -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "./the/module.mjs", "dup")
pub fn one() -> Nil

@external(javascript, "./the/module.mjs", "dup")
pub fn two() -> Nil


----- COMPILED JAVASCRIPT
import { dup as one, dup as two } from "./the/module.mjs";

export { one, two };
