compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__erlang_only.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 273
expression: "\npub fn should_be_generated(x: Int) -> Int {\n  x\n}\n\n@external(erlang, \"one\", \"one\")\npub fn should_not_be_generated(x: Int) -> Int\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn should_be_generated(x: Int) -> Int {
  x
}

@external(erlang, "one", "one")
pub fn should_not_be_generated(x: Int) -> Int


----- COMPILED JAVASCRIPT
export function should_be_generated(x) {
  return x;
}
