compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__external_fn_escaping.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 103
expression: "\n@external(javascript, \"./ffi.js\", \"then\")\npub fn then(a: a) -> b"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "./ffi.js", "then")
pub fn then(a: a) -> b

----- COMPILED JAVASCRIPT
import { then as then$ } from "./ffi.js";

export { then$ };
